--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -9,6 +9,7 @@
             id="name"
             name="name"
             ngModel
+            required
             class="form-control">
         </div>
         <div class="col-sm-2 form-group">
@@ -18,12 +19,15 @@
             id="amount"
             name="amount"
             ngModel
+            required
+            pattern="^[1-9]+[0-9]*$"
             class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <button
+            [disabled]="!f.valid"
             class="btn btn-success"
             type="submit">Add</button>
           <button class="btn btn-danger" type="button">Delete</button>
